--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Web Portfolio </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&family=Xanh+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Okay</h1>
+    <section class="top-banner">
+        <div class="top-container">
+        <h2>Hello I'm</h2>
+        <h1 >Shahriar Saleh</h1>
+        <p class="top-para">I am just a regular guy who dreams big and want to become a Full Stack Web Developer. Maybe I will become a big developer one day.</p>
+        <a class="link-btn" target="_blank" href="mailto:shahriarfahim19@gmail.com">Hire Me</a>
+        </div>
+        <div class="top-container">
+            <img src="Images/Pic1.png" alt=""style="width: 480px; height: 480px;">
+        </div>
+
+    </section>
+
+    <section class="second-banner">
+        <div class="second-container">
+            <img src="Images/Pic1.png" alt=""style="width: 480px; height: 480px;">
+
+        </div>
+        <div class="second-container">
+            <h1 class="second-cont-heading">About Me</h1>
+            <p class="second-para">
+                I am Fahim. I am an undergrad CSE Student from Bangladesh. I love to play video games and I love to code.
+            </p>
+            <a class="link-btn" target="_blank" href="mailto:shahriarfahim19@gmail.com">Download Resume</a>
+        </div>
+        
+    </section>
+    <section class="latest-work-projects">
+        <h1 class="project-heading1"><span class="red-highlight">Latest Work</span> Projects</h1>
+        <div class="project">
+            <img src="Images/TinCat.png"style="width: 346.75px; height: 171.5px;">
+            <h1 class="project-heading2">TinCat</h1>
+            <p>A dating website for Cats</p>
+
+        </div>
+        <div class="project">
+            <img src="Images/Appereal.png"style="width: 346.75px; height: 171.5px;">
+            <h1 class="project-heading2">Base Appereal</h1>
+            <p>Opening Soon</p>
+
+        </div>
+        <div class="project">
+            <img src="Images/DrumKit.png"style="width: 346.75px; height: 171.5px;">
+            <h1 class="project-heading2">DrumKit</h1>
+            <p>A website to play drums</p>
+
+
+        </div>
+
+
+    </section>
+    
 </body>
 </html>
